--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -1,5 +1,10 @@
-client_max_body_size 100M;
+client_max_body_size  100M;
 limit_conn_zone $binary_remote_addr zone=addr:10m;
+proxy_connect_timeout 1d;
+proxy_send_timeout 1d;
+proxy_read_timeout 1d;
+send_timeout 1d;
+fastcgi_read_timeout 1d;
 
 server {
   listen 443 ssl http2;
