--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       MYSQL_DATABASE: <wp-db-name>
       MYSQL_USER: <wp-db-user>
       MYSQL_PASSWORD: <wp-db-user-pass>
+    ports:
+      - '6379:6379'
     volumes:
       - ./data/mysql:/var/lib/mysql
     command: '--default-authentication-plugin=mysql_native_password'
@@ -53,6 +55,8 @@ services:
         define( 'WP_DEBUG', true );
         define( 'WP_DEBUG_DISPLAY', false );
         define( 'WP_DEBUG_LOG', true );
+    ports:
+      - '3306:3306'
     volumes:
       - ./data/wordpress:/var/www/html
       - ./config/php.ini:/usr/local/etc/php/conf.d/php.ini
@@ -70,7 +74,7 @@ services:
       - '443:443'
     volumes:
       - ./data/wordpress:/var/www/html
-      - ./config/nginx/nginx.conf:/etc/nginx/conf.d/nginx.conf
+      - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./config/nginx/ssl:/etc/ssl
     networks:
       - wp-net
